--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "restler": "~3.1.0",
     "express": "~3.4.7",
     "twilio": "1.5.x",
-    "mysql": "2.0.0",
+    "mysql": "^2.0.0",
     "node-zendesk": "0.0.9",
-    "orm": "2.1.3"
+    "orm": "^2.1.3"
   },
   "analyze": false,
   "devDependencies": {
