--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "node-zendesk": "0.0.9",
     "orm": "^2.1.3",
     "underscore": "^1.6.0",
-    "sequelize": "^1.7.0"
+    "sequelize": "^1.7.0",
+    "dotenv": "^0.2.5"
   },
   "analyze": false,
   "devDependencies": {
@@ -33,7 +34,8 @@
     "jasmine-node": "~1.12.0",
     "grunt-express-server": "~0.4.11",
     "grunt-contrib-watch": "~0.5.3",
-    "sqlite3": "^2.2.0"
+    "sqlite3": "^2.2.0",
+    "nock": "^0.27.2"
   },
   "bundledDependencies": [],
   "license": "RESTRICTED",
