--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "orm": "^2.1.3",
     "underscore": "^1.6.0",
     "sequelize": "^1.7.0",
-    "dotenv": "^0.2.5"
+    "dotenv": "^0.2.5",
+    "rollbar": "~0.3.1"
   },
   "analyze": false,
   "devDependencies": {
