--- a/opsworks.js.example
+++ b/opsworks.js.example
@@ -1,16 +1,10 @@
-exports.customEnviroment =
+exports.customEnvironment =
   { "NODE_ENV": "development",
     "PORT": "80",
-    "roomorama_db": {
-      "DATABASE_HOST": "somehost",
-      "DATABASE_NAME": "somename",
-      "DATABASE_PASSWORD": "somepassword",
-      "DATABASE_USER": "mayberoot"
-    },
-    "roomorama_api": {
-      "ROOMORAMA_ACCESS_TOKEN": "sometoken"
-    },
-    "zendesk": {
-      "ZENDESK_ACCESS_TOKEN": "sometoken"
-    },
+    "DATABASE_HOST": "somehost",
+    "DATABASE_NAME": "somename",
+    "DATABASE_PASSWORD": "somepassword",
+    "DATABASE_USER": "mayberoot",
+    "ROOMORAMA_ACCESS_TOKEN": "sometoken",
+    "ZENDESK_ACCESS_TOKEN": "sometoken"
   };
