--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "node-zendesk": "0.0.9",
     "underscore": "^1.6.0",
     "sequelize": "^1.7.0",
-    "rollbar": "~0.3.1"
+    "rollbar": "~0.3.1",
+    "dotenv": "~0.2.5"
   },
   "analyze": false,
   "devDependencies": {
