--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "underscore": "^1.6.0",
     "sequelize": "^1.7.0",
     "rollbar": "~0.3.1",
-    "dotenv": "~0.2.5"
+    "dotenv": "~0.2.5",
+    "log": "~1.4.0"
   },
   "analyze": false,
   "devDependencies": {
