--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
     "coffee-script": "~1.6.3",
     "restler": "~3.1.0",
     "express": "~3.4.7",
-    "twilio": "1.5.x",
     "mysql": "^2.0.0",
     "node-zendesk": "0.0.9",
     "underscore": "^1.6.0",
     "sequelize": "^1.7.0",
     "rollbar": "~0.3.1",
     "dotenv": "~0.2.5",
-    "log": "~1.4.0"
+    "log": "~1.4.0",
+    "twilio": "~1.6.0"
   },
   "analyze": false,
   "devDependencies": {
